[package]
name = "daisy"
description = "A ridiculous SSH daisy chain"
version = "0.0.0"
edition = "2021"
authors = [
    "Kian Kasad <kian@kasad.com>",
]
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4.5.23", features = ["cargo"] }
libssh2-sys = "0.3.0"
log = "0.4.22"
pretty_assertions = "1.4.1"
simplelog = "0.12.2"
ssh2 = "0.9.4"
thiserror = "2.0.7"
users = "0.11.0"
