[package]
name = "daisy"
description = "A ridiculous SSH daisy chain"
version = "0.0.0"
edition = "2021"
authors = [
    "Kian Kasad <kian@kasad.com>",
]
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
libssh2-sys = "0.3.0"
log = "0.4.22"
pretty_assertions = "1.4.1"
serde = { version = "1.0.216", features = ["derive"] }
simplelog = "0.12.2"
ssh2 = "0.9.4"
thiserror = "2.0.7"
toml = "0.8.19"
uzers = "0.12.1"
